# crud_template

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/routers/: products.py
app/core/: config.py
app/crud/: base.py  crud_product.py  template_base.py  template_crud_product.py
app/db/: base.py  session.py
app/models/: product.py
app/schemas/: product.py
app/services/: product_service.py
docs/: architecture.md  future_tasks.md  project_structure.txt
scripts/: init_db.py
tests/: conftest.py  test_db_init.py  test_products.py  test_products_extended.py  test_simple.py
